[package]
name = "central-repository-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sea-orm = { version = "0.12.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
central-repository-dao = { path = "../core" }
actix-http = "3"
actix-web = "4.3.1"
serde = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
central-repository-config = { path = "../config" }
pretty_env_logger = "0.5.0"
log = "0.4.17"
serde_json = "1.0.93"
rayon = "1.6.1"
thiserror = "1.0.38"
futures = "0.3.26"
envconfig = "0.10.0"
argon2 = "0.5.0"
jsonwebtoken = "9.1.0"
ring = "0.17.5"
base64 = "0.21.0"
chrono = "0.4.23"
tracing = { version = "0.1.37", features = ["log", "async-await"] }
uuid = { version = "1.3.0", features = ["v4"] }
mimalloc = { version = "*", default-features = false }
async-trait = "0.1.66"
itertools = "0.11.0"
strum = { version = "0.24.1", features = ["derive"] }
regex = "1.8.1"
once_cell = "1.17.1"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls"] }
rand = "0.8.5"
lazy_static = "1.4.0"
better-debug = "1.0.1"
