[package]
name = "central-repository-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sea-orm = { version = "0.12.9", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
central-repository-dao = { path = "../core" }
actix-http = "3"
actix-web = "4.4.0"
serde = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
central-repository-config = { path = "../config" }
pretty_env_logger = "0.5.0"
log = "0.4.20"
serde_json = "1.0.108"
rayon = "1.8.0"
thiserror = "1.0.50"
futures = "0.3.29"
envconfig = "0.10.0"
argon2 = "0.5.2"
jsonwebtoken = "9.2.0"
ring = "0.17.7"
base64 = "0.21.5"
chrono = "0.4.31"
tracing = { version = "0.1.40", features = ["log", "async-await"] }
uuid = { version = "1.6.1", features = ["v4"] }
mimalloc = { version = "*", default-features = false }
async-trait = "0.1.74"
itertools = "0.11.0"
strum = { version = "0.24.1", features = ["derive"] }
regex = "1.10.2"
once_cell = "1.19.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls"] }
rand = "0.8.5"
lazy_static = "1.4.0"
better-debug = "1.0.1"
