[package]
name = "central-repository-dao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
chrono = "0.4.23"
entity = { path = "../entity" }
log = "0.4.17"
async-trait = "0.1.68"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
rayon = "1.7.0"
futures = "0.3.28"
regex = "1.8.1"
itertools = "0.10.5"
uuid = { version = "1.3.3", features = ["v4"] }