[package]
name = "central-repository-dao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.10", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
chrono = "0.4.31"
entity = { path = "../entity" }
log = "0.4.20"
central-repository-config = { path = "../config" }

async-trait = "0.1.75"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
rayon = "1.8.0"
futures = "0.3.29"
regex = "1.10.2"
itertools = "0.12.0"
uuid = { version = "1.6.1", features = ["v4"] }
sea-query = "0.30.5"
tokio = { version = "1.35.1", features = ["rt"] }
flume = "0.11.0"
async-stream = "0.3.5"
thiserror = "1.0.51"
better-debug = "1.0.1"
tracing = "0.1.40"
once_cell = "1.19.0"
