[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
chrono = "0.4.23"
serde_json = "1.0.93"
central-repository-macros = { path = "../macros" }
sea-orm = { version="0.11.3", features = ["sqlx-postgres"] }
thiserror = "1.0.40"

#[dependencies.sea-orm]
#version = "0.11.2" # sea-orm version
