[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
strum = { version = "0.25.0", features = ["derive"] }
sea-orm = { version = "0.12.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4.23"
serde_json = "1.0.93"
central-repository-macros = { path = "../macros" }
thiserror = "1.0.40"
uuid = { version = "1.3.3", features = ["v4"] }
better-debug = "1.0.1"
