[package]
name = "central-repository-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
darling = "0.14.4"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = { version = "1.0.109", features = ["extra-traits", "full"] }
