[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
# async-std = { version = "1", features = ["attributes", "tokio1"] }
entity = { path = "../entity" }
tokio = "1.26.0"

[dependencies.sea-orm-migration]
# version = "0.11.2" # sea-orm-migration version
git = "https://github.com/SeaQL/sea-orm.git"
features = [
  "runtime-tokio-native-tls",
  "sqlx-postgres",
]
