[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }

[dependencies.sea-orm-migration]
version = "0.12.10"
features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
]
